// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders text 1`] = `
<div>
  <span
    class="sc-aXZVg eKDsjP"
  >
    A simple text
  </span>
</div>
`;

exports[`<Text /> renders text with fontSize 1`] = `
<div>
  <span
    class="sc-aXZVg ftKqel"
  >
    A large text
  </span>
</div>
`;

exports[`<Text /> renders text with fontWeight 1`] = `
<div>
  <span
    class="sc-aXZVg kVLjpI"
  >
    A bold text
  </span>
</div>
`;

exports[`<Text /> renders text with variant 1`] = `
<div>
  <span
    class="sc-aXZVg krMWMP"
  >
    A colored text
  </span>
</div>
`;
